@@ -1,5 +1,5 @@
 [BUILDDEB]
-builder = defaultbuild
+builder = defaultexport
 result-dir = defaultresult
 build-dir = defaultbuild
 merge = True
