@@ -1,2 +1,3 @@
 [BUILDDEB]
+export-upstream = localexport
 builder = localbuilder
