@@ -1,4 +1,4 @@
 [BUILDDEB]
 builder = userbuild
 result-dir = userresult
-
+export-upstream = userexport
