@@ -25,6 +25,13 @@ bzr-builddeb (0.14) unstable; urgency=low
   * Add an option to stop the build if the above mentioned pull did nothing.
   * Add a --short/-S parameter to build source packages and a source-builder
     option to configure what it does.
+  * Builddeb configuration files that are used in the branch are marked as
+    non-trusted. This means that you can no longer set any of the builders in
+    them, as this would be arbitrary code execution. You have to set the
+    builders in your ~/.bazaar/builddeb.conf now. If you don't like this
+    change then please propose a scheme that allows you to do what you want,
+    but doesn't expose people to the security threat.
+
 
  -- James Westby <jw+debian@jameswestby.net>  Tue, 16 Jan 2007 21:25:33 +0000
 
